force-app/main/default/objects/EY_Solution__c/EY_Solution__c.object-meta.xml
<CustomObject>
    <label>EY Solution</label>
    <nameField>
        <label>EY Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EY Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>