force-app/main/default/objects/EY_Solution__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EY Solutions</relationshipLabel>
    <relationshipName>EY_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>