force-app/main/default/objects/EY_Solution__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Url</type>
</CustomField>