force-app/main/default/objects/EY_Solution__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Comma-separated list of tags to search and display in the portal</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>