force-app/main/default/objects/EY_Solution__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Tool - Internal</fullName>
            </value>
            <value>
                <fullName>Tool - 3rd Party</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>