force-app/main/default/objects/EY_Solution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Tags__c</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <columns>Package__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>